--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -25,3 +25,9 @@ body {
     line-height: 1.5;
     text-rendering: optimizespeed;
 }
+
+
+a {
+    color: var(--white);
+    text-decoration: none;
+}
